@@ -958,6 +958,36 @@ test_bson_validate_dbref (void)
 }
 
 
+/* BSON spec requires bool value to be exactly 0 or 1 */
+static void
+test_bson_validate_bool (void)
+{
+   /* {"b": true}, with implicit NULL at end */
+   uint8_t data[] = "\x09\x00\x00\x00\x08\x62\x00\x01";
+   bson_t bson;
+   bson_iter_t iter;
+   size_t err_offset = 0;
+
+   ASSERT (bson_init_static (&bson, data, sizeof data));
+   ASSERT (bson_validate (&bson, BSON_VALIDATE_NONE, &err_offset));
+   ASSERT (bson_iter_init (&iter, &bson));
+   ASSERT (bson_iter_next (&iter));
+   ASSERT (BSON_ITER_HOLDS_BOOL (&iter));
+   ASSERT (bson_iter_bool (&iter));
+
+   /* replace boolean value 1 with 255 */
+   ASSERT (data[7] == '\x01');
+   data[7] = '\xff';
+
+   ASSERT (bson_init_static (&bson, data, 9));
+   ASSERT (!bson_validate (&bson, BSON_VALIDATE_NONE, &err_offset));
+   assert_cmpint (err_offset, ==, 7);
+
+   ASSERT (bson_iter_init (&iter, &bson));
+   ASSERT (!bson_iter_next (&iter));
+}
+
+
 static void
 test_bson_validate (void)
 {
@@ -1991,6 +2021,7 @@ test_bson_install (TestSuite *suite)
    TestSuite_Add (suite, "/bson/utf8_key", test_bson_utf8_key);
    TestSuite_Add (suite, "/bson/validate", test_bson_validate);
    TestSuite_Add (suite, "/bson/validate/dbref", test_bson_validate_dbref);
+   TestSuite_Add (suite, "/bson/validate/bool", test_bson_validate_bool);
    TestSuite_Add (suite, "/bson/new_1mm", test_bson_new_1mm);
    TestSuite_Add (suite, "/bson/init_1mm", test_bson_init_1mm);
    TestSuite_Add (suite, "/bson/build_child", test_bson_build_child);
